# tman

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.omc/: project-memory.json
.omc/sessions/: 7061a936-2291-45fd-bc5b-583fecc1398f.json  75c47ac2-8983-47bd-8b2f-754d0807ebe6.json  8837577f-10ff-48b0-9bb2-f2addeb94766.json
src/: config.rs  main.rs  terminal.rs  tmux.rs  ui.rs
