[package]
name = "tmux-pilot"
version = "0.2.0"
edition = "2021"
description = "TUI tmux session manager with persistent sidebar and embedded terminal"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
vt100 = "0.15"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"


